--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <section class="secao-com-texto" id="quem-somos">
                 <header>
-                    <img src="/src/images/logo-secoes.png" alt="">
+                    <img src="./src/images/logo-secoes.png" alt="">
                     <h2>Quem Somos</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero ipsum quibusdam harum. Impedit,
                                             reiciendis vitae obcaecati vel libero laboriosam! Atque amet et mollitia debitis eos sapiente,
@@ -61,7 +61,7 @@
 
             <section class="secao-com-texto onde-estamos" id="onde-estamos">
                 <header>
-                    <img src="/src/images/logo-secoes.png" alt="">
+                    <img src="./src/images/logo-secoes.png" alt="">
                     <h2>Quem Somos</h2>
                     <p>Avenida Brigadeiro Faria Lima, 444
                         <br>
@@ -86,7 +86,7 @@
 
         <footer class="rodape">
             <a href="index.html">
-                <img src="/src/images/logo.jpg">
+                <img src="./src/images/logo.jpg">
             </a>
             <ul>
                 <li>
@@ -103,11 +103,11 @@
                 <div class="redes-sociais">
 
                     <a href="#" target="_blank">
-                        <img class="facebook" title="logo-facebook" src="/src/images/face.png">
+                        <img class="facebook" title="logo-facebook" src="./src/images/face.png">
                     </a>
 
                     <a href="#" target="_blank">
-                        <img class="instagram" title="logo-instagram" src="/src/images/insta.png">
+                        <img class="instagram" title="logo-instagram" src="./src/images/insta.png">
                     </a>
 
                 </div>
